[project]
name = "crossub-voice-agent"
version = "0.1.0"
description = "CROSSUB phone AI voice agent — LiveKit Agents sidecar (Phase 0 PoC)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "httpx>=0.28.1",
    "livekit-agents[anthropic,deepgram,elevenlabs,silero,turn-detector]~=1.0",
    "python-dotenv>=1.0",
]

# Optional: LiveKit Cloud enhanced noise cancellation for telephony (BVCTelephony).
# Requires a LiveKit Cloud project. Install with: uv sync --extra telephony
[project.optional-dependencies]
telephony = [
    "livekit-plugins-noise-cancellation~=0.2",
]

[project.scripts]
crossub-voice-agent = "crossub_voice_agent.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crossub_voice_agent"]
